<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp">

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/pin_adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            ads:adSize="BANNER"
            ads:adUnitId="@string/admob_banner1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/pin_form"
            android:layout_below="@id/pin_adView">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/enter_pincode"
                style="@style/Widget.Shrine.TextInputLayout"
                android:textColorHint="@android:color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/enter_pin"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/polling_interval"
                android:textSize="16sp"
                android:layout_marginBottom="15dp"
                android:textColor="@android:color/black"/>

            <Spinner
                android:id="@+id/pin_select_polling_interval_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:layout_marginBottom="15dp"
                android:background="@drawable/spinner_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/pin_checkbox_18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="18+ Age"
                    android:textSize="16sp"
                    android:layout_marginRight="10dp"
                    android:buttonTint="@color/colorPrimaryDark"
                    android:checked="true"/>

                <CheckBox
                    android:id="@+id/pin_checkbox_45"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="45+ Age"
                    android:textSize="16sp"
                    android:buttonTint="@color/colorPrimaryDark"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/pin_start_monitoring_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/start_monitoring"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:textColor="@android:color/white"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp" />

                <Button
                    android:id="@+id/pin_stop_monitoring_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/stop_monitoring"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@android:color/white"
                    android:layout_weight="1"
                    android:enabled="false"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_pin_last_checked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_checked_at"
                android:textSize="16sp"
                android:layout_marginBottom="15dp"
                android:textColor="@android:color/black"
                android:textStyle="bold"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/pin_vaccinedata_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pin_form"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_line1"
            android:layout_below="@id/pin_vaccinedata_recyclerview"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/data_line1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_line2"
            android:layout_below="@id/data_line1"
            android:layout_marginBottom="20dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14dp"
            android:textAlignment="center"/>
    </RelativeLayout>
</ScrollView>